kyber768 upgrade; stabilize haproxy base for alpine

--- a/haproxy/alpine/haproxy-client.cfg
+++ b/haproxy/alpine/haproxy-client.cfg
@@ -19,5 +19,5 @@ backend qsc_servers
     cookie SERVERUSED insert indirect nocache
     #option ssl-hello-chk
     default-server check maxconn 20
-    server server1 my.ha.proxy:4443 ssl ca-file CA.crt verify required check-ssl
+    server server1 my.ha.proxy:4443 ssl ca-file /opt/haproxy/conf/CA.crt verify required check-ssl
 
