--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ localCheckout: &localCheckout
     - setup_remote_docker
     - run:
         name: env test
-        command: echo "Targetname: " && env && echo $TARGETNAME
+        command: env
     - run:
         name: docker login
         command: echo $DOCKER_PASSWORD | docker login --username $DOCKER_LOGIN --password-stdin && echo "Targetname: $TARGETNAME" && env
